[package]
name = "invoice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
chrono = { version = "0.4.19" }
clap = { version = "3.0.13", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
