[package]
name = "windows-vm"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ctrlc = "3"
libc = "0.2"
log = "0.4"
nix = "0.20"
once_cell = "1"
regex = "1"
simple_logger = "1"
structopt = "0.3"
